dependency-upgrade: use super-pom